--- a/shared/header.css
+++ b/shared/header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -7,8 +9,9 @@ html{
     font-size: 62.5%;
 }
 header{
+    font-family: "League Spartan", sans-serif;
 display: flex;
-flex-direction: row;
+flex-direction: column;
 min-height: 100vh;
 }
 .header-div{
@@ -18,7 +21,7 @@ min-height: 100vh;
     width: 100%;
     height: 7.2rem;
     background-color: #373b53;
-    padding: ;
+    
 
 }
 .header-logo{
@@ -34,22 +37,91 @@ min-height: 100vh;
     width: 3.2rem;
     height: 3.2rem;
     border-radius: 50%;
+   
     
 }
+
 .moon{
     width: 2rem;
     height: 2rem;
+    margin-left: 16rem;
 }
-.avatar-moon{
-    display: flex;
+.avatar-cont{
+    width: 8rem;
+    border-left: 0.2rem solid #494e6e;
+    height: 100%;
+    display:flex;
+    justify-content:center;
     gap: 4.8rem;
     align-items: center;
-    margin: 2rem 2.4rem 2rem auto;
+    margin: 2rem 0 2rem auto;
     
 }
 .header-main{
-    position: absolute;
-    margin-top: 10.2rem;
+    padding: 3.6rem 2.4rem 3.2rem 2.4rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+.invoices h1{
+    font-size: 2.4rem;
+    letter-spacing: -0.075rem;
+    font-weight: bold;
+}
+.invoices p{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #888eb0;
+    line-height: 1.15;
+}
+.invoices{
+margin-right: auto;
+}
+.filter-button{
+    border: none;
+    background-color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #0c0e16;
+    line-height: 1;
+    margin-right: 1.2rem;
+}
+.arrow-down{
+    margin-right: 1.2rem;
+}
+/* .new-div p{
+    left: 2rem;
+    border: none;
+    background-color: #7c5dfa;
+    color: white;
+    font-size: 1.5rem;
+  font-weight: bold;
+} */
+.new-div{
+    padding: 0.6rem;
+    width: 9rem;
+    height: 4.4rem;
+    background-color: #7c5dfa;
+    display: flex;
+   align-items: center;
+   justify-content: start;
+    position: relative;
+    border-radius: 2rem;
+}
+.plus{
+   display: flex;
+   align-items: center;
+    justify-content:center;
+     background-color: white;
+    position: absolute;
+    width: 32px;
+   height: 32px;
+   border-radius: 50%;
+}
+.new-div p{
+    margin-left: 4rem;
+    color: white;
+    font-size: 1.5rem;
+  font-weight: bold;
+
 }
