--- a/pages/invoice/invoice.css
+++ b/pages/invoice/invoice.css
@@ -11,7 +11,6 @@ header {
   justify-content: space-between;
   align-items: center;
   flex-grow: 0;
-  /* min-height: 72px; */
 }
 
 .logoContainer {
@@ -19,10 +18,7 @@ header {
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
-  /* flex-shrink: 0;
-  margin: 26px 24px;
-  height: inherit;
-  width: inherit; */
+
   margin-right: 24px;
 }
 
@@ -39,11 +35,6 @@ header {
   border-radius: 0 30px 30px 0;
 }
 
-/* .logoImg {
-
-  padding: 22px 23px;
-} */
-
 .avatarContainer img {
   height: 32px;
   width: 32px;
@@ -55,7 +46,8 @@ header {
 }
 
 main {
-  padding: 33px 24px 22px;
+  padding: 0 24px 22px;
+  display: none;
 }
 
 .goBack {
@@ -63,6 +55,8 @@ main {
   font-weight: 700;
   line-height: 15px;
   letter-spacing: -0.25px;
+  margin-top: 33px;
+  margin-left: 24px;
 }
 
 .goBack img {
@@ -73,10 +67,6 @@ main {
   display: flex;
   flex-direction: column;
 }
-
-/* input {
-  padding: 0 15px;
-} */
 
 .cityAndPostCode {
   display: flex;
@@ -124,26 +114,12 @@ input {
 .totalBox {
   width: 64px;
   border: 0;
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center; */
 }
 
 .deleteBtn {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.quantityTotalPrice {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-}
-
-.quantityTotalPrice img {
-  /* width: 100%;
-  height: 100%; */
 }
 
 .billTitle {
@@ -169,6 +145,7 @@ h3 {
   justify-content: center;
   position: relative;
   height: 91px;
+  display: none;
 }
 
 .discardBtn {
@@ -200,8 +177,8 @@ h3 {
 
 .linearBoxDiv {
   height: 64px;
-  /* position: absolute;
-  top: 150px; */
+  display: none;
+
   width: 100%;
   background-image: linear-gradient(
     180deg,
@@ -231,4 +208,155 @@ h3 {
   letter-spacing: -0.375px;
   color: #777f98;
   margin-top: 69px;
+}
+
+.invoiceView {
+  background-color: #f8f8fb;
+  padding: 0 24px 56px;
+}
+
+.statusBox {
+  padding: 24px 24px 27px 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+}
+
+.statusBox p {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: -0.10000000149011612px;
+  color: #858bb2;
+}
+
+.statusBox-state {
+  background-color: #ff910021;
+  border-radius: 5px;
+  padding: 14px 18px 10px 18px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.statusBox-state p {
+  color: #ff8f00;
+
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: -0.25px;
+}
+
+.oval {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #ff8f00;
+}
+
+.invoiceSummary {
+  margin-top: 16px;
+  background-color: #ffffff;
+  padding: 24px 25px;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: -0.10000000149011612px;
+  color: #7e88c3;
+}
+
+.invoiceSummary h1 {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: -0.25px;
+}
+
+.projectDescription {
+  margin-top: 4px;
+}
+
+.adressFrom {
+  margin: 30px 0 31px 0;
+}
+
+.invoiceDate,
+.paymentTerms,
+.clientName,
+.clientEmail,
+.itemName,
+.total {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: -0.25px;
+  color: #0c0e16;
+}
+
+.billToBox {
+  display: flex;
+  gap: 61px;
+}
+
+.invoiceDateBox,
+.paymentDue {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.paymentDue {
+  margin-top: 30px;
+}
+
+.billToDetailsBox {
+  display: flex;
+  flex-direction: column;
+}
+
+.billToTitle {
+  margin-bottom: 13px;
+}
+
+.sentToEmailBox {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.orderSummaryBox {
+  background-color: #f9fafe;
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.titleAndUnitBox {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.orderTotalBox {
+  background-color: #373b53;
+  padding: 26px 24px 22px;
+  border-radius: 0px 0px 8px 8px;
+}
+
+.grandTotalBox {
+  display: flex;
+  justify-content: space-between;
+  color: #ffffff;
+  align-items: center;
+}
+
+.grandTotal {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: -0.5px;
 }
