--- a/pages/invoice/invoice.css
+++ b/pages/invoice/invoice.css
@@ -47,7 +47,6 @@ header {
 
 main {
   padding: 0 24px 22px;
-  display: none;
 }
 
 .goBack {
@@ -148,16 +147,14 @@ h3 {
   height: 91px;
 }
 
-.buttonsContainer {
-  display: none;
-}
-
 .saveBtn,
 .draftBtn,
 .discardBtn,
 .editBtn,
 .deleteBtn,
-.paidBtn {
+.paidBtn,
+.saveChangesBtn,
+.cancelBtn {
   font-size: 15px;
   font-weight: 700;
   line-height: 15px;
@@ -168,7 +165,8 @@ h3 {
 }
 
 .discardBtn,
-.editBtn {
+.editBtn,
+.cancelBtn {
   background-color: #f9fafe;
   color: #7e88c3;
 }
@@ -181,7 +179,8 @@ h3 {
   color: #7e88c3;
 }
 
-.saveBtn {
+.saveBtn,
+.saveChangesBtn {
   background-color: #7c5dfa;
   color: #ffffff;
 }
@@ -200,7 +199,6 @@ h3 {
 
 .linearBoxDiv {
   height: 64px;
-  display: none;
   width: 100%;
   background-image: linear-gradient(
     180deg,
@@ -208,6 +206,12 @@ h3 {
     rgba(0, 0, 0, 0.1) 100%
   );
 }
+
+/* .linearBoxDiv,
+main,
+.buttonsContainer {
+  display: none;
+} */
 
 .addNewItem {
   padding: 18px 107px 15px 107px;
@@ -382,4 +386,9 @@ h3 {
   font-weight: 700;
   line-height: 32px;
   letter-spacing: -0.5px;
+}
+
+.invoiceView,
+.buttonsContainer2 {
+  display: none;
 }
