--- a/shared/header.css
+++ b/shared/header.css
@@ -22,6 +22,7 @@ background-color: #f8f8fb;
     width: 100%;
     height: 7.2rem;
     background-color: #373b53;
+    justify-content: space-between;
     
 
 }
@@ -41,17 +42,24 @@ background-color: #f8f8fb;
    
     
 }
+.avatar-moon{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+
+}
 
 .moon{
    
-    width: 2rem;
-    height: 2rem;
+   margin-right: 2.4rem;
    
 }
 .avatar-cont{
     width: 8rem;
     border-left: 0.2rem solid #494e6e;
-    height: 100%;
+    height:100%;
     display:flex;
     justify-content:center;
     gap: 4.8rem;
