--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ main{
     font-weight: 500;
     color: #7e88c3;
 }
-.invoice1 .invoice-secondary-source .date-price p{
+.invoice1 .invoice-secondary-source .date p{
     font-size: 1.5rem;
     font-weight: bold;
     color: #0c0e16;
