--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,17 @@ body {
   background-color: #f8f8fb;
   display: flex;
   flex-direction: column;
+  
 }
-
+.indexMain{
+  display: flex;
+}
 main {
   padding: 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
 }
 .invoice1 {
   display: flex;
