--- a/pages/invoice/invoice.css
+++ b/pages/invoice/invoice.css
@@ -403,3 +403,60 @@ main,
 .displayFlex {
   display: flex;
 }
+
+/* delete promptis css  */
+
+.prompt{
+  justify-content: center;
+  position: absolute;
+  margin-left: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: auto;
+  height: auto;
+  background-color:white;
+  padding:3.4rem 3.2rem 3.2rem 2.4rem;
+  display: none;
+}
+
+.prompt h1{
+  font-size: 2.4rem;
+font-weight: bold;
+color: #0c0e16;
+line-height: 1.33;
+letter-spacing: -0.05rem;
+}
+.prompt p{
+  font-size: 1.3rem;
+font-weight: 500;
+line-height: 1.69;
+letter-spacing: -0.01rem;
+color: #888eb0;
+margin-top: 0.8rem;
+}
+.buttons{
+  display: flex;
+  justify-content: end;
+  margin-top: 2.2rem;
+  gap: 0.8rem;
+}
+.buttons .cancel{
+  width: 9.1rem;
+height: 4.8rem;
+border: none;
+border-radius: 2.4rem;
+font-size: 1.5rem;
+font-weight: bold;
+color: #7e88c3;
+}
+.buttons .delete{
+  width: 9.1rem;
+height: 4.8rem;
+border: none;
+border-radius: 2.4rem;
+font-size: 1.5rem;
+font-weight: bold;
+color: white;
+background-color: #ec5757;
+}
