--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@ main {
   font-weight: 500;
   color: #7e88c3;
 }
+.invoice-secondary-source p {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
 .invoice1 .invoice-secondary-source .date p {
   font-size: 1.5rem;
   font-weight: bold;
